--- a/tools/devops/device-tests/templates/device-tests.yml
+++ b/tools/devops/device-tests/templates/device-tests.yml
@@ -230,7 +230,7 @@ steps:
 
     P=jenkins/xamarin-macios/$BUILD_LANE/$BUILD_REVISION/$ID/device-tests
 
-    echo "##vso[task.setvariable variable=XAMARIN_STORAGE_PATH]$P"
+    echo "##vso[task.setvariable variable=XM_STORAGE_PATH]$P"
 
     X="#vso"
     set +x
@@ -246,20 +246,24 @@ steps:
 - bash: |
     set -x
     set -e
+    P=$(echo $XM_STORAGE_PATH | tr -d \'\")
     echo 'Use xamarin storage $USE_XAMARIN_STORAGE'
+    echo 'Use xamarin storage path is $P'
 
     cd $WORKING_DIR/xamarin-macios
     if [[ "$USE_XAMARIN_STORAGE" == "True" ]]; then
       if nc -z xamarin-storage 22 2>/dev/null; then
-        EC=0
-        MKSTORAGE='ssh builder@xamarin-storage "mkdir -p /volume1/storage/$XAMARIN_STORAGE_PATH"'
-        eval $MKSTORAGE || EC=$?
-        if [ $EC -eq 0 ]; then
-          echo '##vso[task.setvariable variable=XAMARIN_STORAGE_PATH;isOutput=true]$XAMARIN_STORAGE_PATH'
-          echo '##vso[task.setvariable variable=XAMARIN_STORAGE_FAILED;isOutput=true]false'
-          export TESTS_PERIODIC_COMMAND="--periodic-interval 10 --periodic-command rsync --periodic-command-arguments '-avz -e \"ssh\" $PWD/jenkins-results builder@xamarin-storage:/volume1/storage/$XAMARIN_STORAGE_PATH'"
-        else
+        MK_DIR="mkdir -p /volume1/storage/$P"
+        ssh builder@xamarin-storage '$MK_DIR'
+        if [[ $? = 1 ]]; then
+          echo "Remote mkdir failed"
           echo '##vso[task.setvariable variable=XAMARIN_STORAGE_FAILED;isOutput=true]true'
+          echo '##vso[task.setvariable variable=XAMARIN_STORAGE_PATH;isOutput=true]""'
+        else
+          echo "Xamarin storage path is $P"
+          echo '##vso[task.setvariable variable=XAMARIN_STORAGE_PATH;isOutput=true]'$P
+          echo '##vso[task.setvariable variable=XAMARIN_STORAGE_FAILED;isOutput=true]false'
+          export TESTS_PERIODIC_COMMAND="--periodic-interval 10 --periodic-command rsync --periodic-command-arguments '-avz -e \"ssh\" $PWD/jenkins-results builder@xamarin-storage:/volume1/storage/$P'"
         fi
       else
         echo '##vso[task.setvariable variable=XAMARIN_STORAGE_FAILED;isOutput=true]true'
@@ -279,7 +283,6 @@ steps:
     fi
   env:
     WORKING_DIR: $(System.DefaultWorkingDirectory) 
-    XAMARIN_STORAGE_PATH: $(XAMARIN_STORAGE_PATH)
     TESTS_EXTRA_ARGUMENTS: ${{ parameters.testsLabels }}
     USE_XAMARIN_STORAGE: '${{ parameters.useXamarinStorage }}'
     VSDROPS_URI: '${{ parameters.vsdropsPrefix }}/$(Build.BuildNumber)/$(Build.BuildId);/tests/' # uri used to create the vsdrops index using full uri
